@@ -1,4 +1,7 @@
 <?php
+
+chdir(__DIR__);
+
 require_once('../config.php');
 require_once('../../config.php');
 
